[project]
name = "psp-comtrade"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "numpy>=2.3.4",
    "psp-dsp",
]

[tool.uv.sources]
psp-dsp = { git = "https://github.com/U-RxI/psp-dsp" }

[dependency-groups]
dev = [
    "pytest>=8.4.2",
    "ruff>=0.14.2",
]
